// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColors() should return correct colors for tagColor: background-base and theme: dark 1`] = `
{
  "backgroundColor": "#0E0E12",
  "backgroundHoverColor": "#292934",
  "textColor": "#FBFCFF",
}
`;

exports[`getColors() should return correct colors for tagColor: background-base and theme: light 1`] = `
{
  "backgroundColor": "#FFF",
  "backgroundHoverColor": "#E0E0E0",
  "textColor": "#010205",
}
`;

exports[`getColors() should return correct colors for tagColor: primary and theme: dark 1`] = `
{
  "backgroundColor": "#FBFCFF",
  "backgroundHoverColor": "#CECFD1",
  "textColor": "#010205",
}
`;

exports[`getColors() should return correct colors for tagColor: primary and theme: light 1`] = `
{
  "backgroundColor": "#010205",
  "backgroundHoverColor": "#535457",
  "textColor": "#FBFCFF",
}
`;

exports[`getComponentCss() should return correct css for color: background-base, compact: false, isFocusable: false, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #0E0E12;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, compact: false, isFocusable: false, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #FFF;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #0E0E12;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #292934;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #FFF;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #E0E0E0;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: background-frosted, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: hsl(240 3% 26%/35%);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: hsl(240 3% 36%/35%);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: background-frosted, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: hsl(240 4% 85%/35%);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: hsl(240 4% 75%/35%);
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #212225;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #3E4045;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #EEEFF2;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #CBCED7;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error-soft, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #3A0F0F;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #3F2828;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error-soft, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #FFE2E4;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #F4CED1;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-info-soft, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #04294E;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #1A3856;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-info-soft, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #D3E1FF;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #C2D1F1;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success-soft, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #003320;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #0F432F;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success-soft, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #E4FFEC;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #D0F4DB;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning-soft, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #362B0A;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #3E3720;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning-soft, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #FFF4D2;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #F1E5C1;
  }
}

.icon {
  margin-inline-start: -2px;
}"
`;

exports[`getComponentCss() should return correct css for color: primary, compact: false, isFocusable: true, hasIcon: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  background: #FBFCFF;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #CECFD1;
  }
}

.icon {
  margin-inline-start: -2px;
  filter: invert(1);
}"
`;

exports[`getComponentCss() should return correct css for color: primary, compact: false, isFocusable: true, hasIcon: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  white-space: nowrap;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: relative;
  display: flex;
  gap: 2px;
  padding: 4px 9px;
  border-radius: 4px;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  background: #010205;
}
::slotted(a), ::slotted(button) {
  all: unset !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  color: inherit !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: "" !important;
  position: absolute !important;
  inset: 0 !important;
  border-radius: 4px !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 0 !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(button::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(button:focus) {
  outline: 0 !important;
}
::slotted(button:focus-visible) {
  outline: 0 !important;
}
::slotted(button:focus-visible)::before {
  outline: 2px solid #1A44EA !important;
  outline-offset: 2px !important;
}
::slotted(br) {
  display: none !important;
}
@media(hover:hover) {
  span {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  span:hover {
    background: #535457;
  }
}

.icon {
  margin-inline-start: -2px;
  filter: invert(1);
}"
`;
